@@ -32,6 +32,7 @@ Not yet released.
 - #282: order responses by primary key if no order is specified.
 - #284: catch ``DataError`` and ``ProgrammingError`` exceptions when bad data
   are sent to the server.
+- #286: speed up paginated responses by using optimized count() function.
 
 Version 0.12.1
 --------------
